--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
+    "next-cloudinary": "^6.17.5",
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
