--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@teachablemachine/image": "^0.8.5",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "leaflet": "^1.9.4",
