--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "firebase": "^12.8.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
